test/instance-checks-5.err.expect
test/instance-checks-5.ktn:1:1: error: expected scalar type t2 but got t1
test/instance-checks-5.ktn:1:1: note: t1 (from example) is from here
test/instance-checks-5.ktn:1:1: note: t2 (from example) is from here

test/instance-checks-5.ktn:1:1: error: expected stack type s1... t2 but got s1... t1

test/instance-checks-5.ktn:1:1: error: expected scalar type (s2... t1 -> s2... t2) but got (s1... -> s1...)
test/instance-checks-5.ktn:1:33: note: (s1... -> s1...) is from here
test/instance-checks-5.ktn:1:15: note: (s2... t1 -> s2... t2) is from here
